# june

./: .env.example  .gitignore  .pre-commit-config.yaml  .refactor_agent_session_id  .user_polling_pid  AGENTS.md  AUDIO_TESTING.md  Dockerfile.model-tools  README.md  REFACTOR_PLAN.md  REFACTOR_PLAN.md.20251118  REFACTOR_PLAN.md.backup.20251119_232347  TODO.md  USER_REQUESTS.md  comprehensive_pipeline_test.py  docker-compose.minimal.yml.example  docker-compose.yml  fix-docker-permissions.sh  june-agent-loop.py  minimal_stt_service.py  pyproject.toml  run_checks.sh  simple_round_trip_test.py  simple_tts_service.py  test_simple_tts.py
.github/workflows/: ci.yml  version-bump.yml
config/: auth-schema.sql  cursor-mcp-config.json  logrotate-june-services.conf  loki-config.yml  nginx.conf  postgres-init.sql  postgres-optimizations.sql  prometheus-alerts.yml  prometheus.yml  switchboard_agents.json
config/grafana/: integration-test-dashboard.json
docs/: OPERATIONAL_READINESS.md  OPERATIONAL_STATUS.md  README.md  database_optimization_summary.md  query_optimization_guide.md
docs/API/: README.md  discord.md  gateway.md  inference.md  stt.md  telegram.md  todo-mcp.md  tts.md
docs/architecture/: AGENTIC_FLOW_DESIGN.md
docs/guides/: AGENTS.md  COMMANDS.md  MESSAGE_FORMAT_REQUIREMENTS.md  MODEL_COMPILATION.md  MONITORING.md  NIM_SETUP.md  QWEN3_BENCHMARK_EVALUATION.md  RIVA_NIM_DEPLOYMENT.md  TENSORRT_LLM_SETUP.md  TESTING.md
essence/: README.md  __init__.py  __main__.py  pyproject-chat.toml  pyproject.toml
essence/agent/: __init__.py
essence/agents/: __init__.py  coding_agent.py  dataset_loader.py  decision.py  evaluator.py  executor.py  llm_client.py  planner.py  reasoning.py  reasoning_cache.py  reflector.py  sandbox.py
essence/audio/: __init__.py
essence/chat/: __init__.py  agent_communication.py  error_handler.py  human_interface.py  interaction.py  markdown_parser.py  message_api_client.py  message_builder.py  message_grouping.py  message_history.py  message_history_analysis.py  platform_translators.py  platform_validators.py  todorama_integration.py  user_messages_sync.py  user_requests_sync.py
essence/command/: __init__.py
essence/commands/: __init__.py  benchmark_qwen3.py  check_environment.py  check_service_status.py  coding_agent.py  (+27 more)
june_agent/: __init__.py  __main__.py  agent.py  db.py  db_v2.py  initiative.py  message.py  prompts.py  request.py  request_factory.py  task.py  tools.py  web_service.py
load_tests/: README.md  __init__.py  generate_report.py  requirements.txt  run_load_tests.py
proto/: asr.proto  llm.proto  llm_pb2_grpc.py  tts.proto  tts_pb2_grpc.py
scripts/: README.md  SCRIPTS_AUDIT.md  architect_agent.sh  benchmark_qwen3_performance.py  build.sh  build_inference_core_wheel.sh  build_june_grpc_api_wheel.sh  capture_discord_user_id.py  count_jaeger_traces.sh  create_pending_tasks.py  cursor_agent_wrapper.sh  deploy.sh  deploy_audio_services.sh  diagnose_test_failures.sh  docker-log-to-file.sh  download_models.py  download_qwen3.py  encrypt_existing_data.py  generate_alice_dataset.py  generate_nim_compose_snippet.sh  get_discord_id_now.py  get_discord_user_id.py  get_discord_user_id_from_messages.py  increment_version.py  log-wrapper.sh  migrate_user_messages_to_queue.py  monitor_agent.sh  monitor_gpu.py  normal_agent.sh  optimize_database_queries.py  precommit_agent.sh  profile_performance.py  project_cleanup_agent.sh  project_manager_agent.sh  refactor_agent_loop.sh  refactor_planner_agent.sh  restart_all_services.sh  review_sandbox.py  review_sandbox.sh  run_all_checks.sh  (+32 more)
shared/: __init__.py  config.py  test_modes.py  utils.py
tests/: README.md  test_agent.py  test_db.py  test_initiative.py  test_prompts.py  test_request.py  test_scenario.py  test_task.py  test_voice_validation.py  test_web_service.py
(+358 files in other folders)
