[project]
name = "june-agent"
version = "0.1.0"
description = "A coding agent using Together.ai"
authors = [
    {name = "N/A"}
]
license = {text = "N/A"}
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "together (>=1.5.8,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-mock = "^3.14.1"
playwright = "^1.42.0"
